# qwen3-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: group_size.md  quantization.md  temperature.md  tokenizer.md  transformer.md
qwen3-cli/: Cargo.toml
qwen3-cli/src/: main.rs
qwen3-export/: Cargo.toml
qwen3-export/src/: chat_template_exporter.rs  config_loader.rs  lib.rs  lora_merger.rs  model_exporter.rs  tensor_reader.rs  tokenizer_exporter.rs  utils.rs
qwen3-export/src/models/: mod.rs  qwen.rs  qwen3.rs
qwen3-export/tests/: config_loader_test.rs  export_integration.rs  model_exporter_test.rs  tokenizer_exporter_test.rs
qwen3-export/tests/unit/: config_loader_test.rs  model_exporter_test.rs  tokenizer_exporter_test.rs
qwen3-inference/: Cargo.toml
qwen3-inference/src/: configuration.rs  generation.rs  layers.rs  lib.rs  sampler.rs  tensor.rs  tokenizer.rs  transformer.rs  utils.rs
qwen3-inference/src/models/: mod.rs  qwen3.rs
