[workspace]
resolver = "2"
members = [
    "qwen3-cli",
    "qwen3-export",
    "qwen3-inference"
]

[workspace.package]
version = "0.1.0"
authors = ["Ilya Builuk <ilya.builuk@gmail.com>"]
repository = "https://github.com/reinterpretcat/qwen3-rs"
license = "Apache-2.0"
keywords = ["LLM", "qwen3"]
categories = ["LLM"]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
byteorder = "1.5"
clap = { version = "4.0", features = ["derive"] }
rayon = "1.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
safetensors = "0.4"
memmap2 = "0.9"
log = "0.4"
env_logger = "0.10"

qwen3-export = { path = "qwen3-export" }
qwen3-inference = { path = "qwen3-inference" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
