[package]
name = "qwen3-export"
description = "A Rust library for exporting Qwen3 models to binary format"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
rayon = { workspace = true }
safetensors = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
memmap2 = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
